@@ -27,12 +27,30 @@ class TOCRenderingAdapter(adapter.Adapter):
     #      modified forms of Folder._get_tree_helper and
     #      Folder._get_public_tree_helper
 
-    def _get_tree_iterator(self, container, indent=0, toc_depth=-1):
+    def _get_container_items(self, container, sort_order, show_types):
+        if sort_order in ('alpha','reversealpha'):
+            items = container.objectItems(show_types)
+            #get_title could be blank, then use id
+            items = [ (o[1].get_title() or o[1].id,o) for o in items ]
+            items.sort()
+            items = [ o[1] for o in items ]
+            if sort_order == 'reversealpha':
+                items.reverse()
+        else: #determine silva sorting
+            nonordered_items = [ i for i in container.objectItems(show_types) if i[0] not in container._ordered_ids ]
+            ordered_items = [ (i,getattr(container.aq_explicit,i)) for i in container._ordered_ids  ]
+            items = ordered_items + nonordered_items
+        return items
+    
+
+    def _get_tree_iterator(self, container, indent=0, toc_depth=-1,sort_order='silva',show_types=['Silva Document','Silva Folder', 'Silva Publication']):
         """yield for every element in this toc
         The 'depth' argument limits the number of levels, defaults to unlimited
         """
-        for item in container.get_ordered_publishables():
-            if indent and item.id == 'index': #include the containers index
+        items = self._get_container_items(container,sort_order,show_types)
+
+        for (name,item) in items:
+            if indent and name == 'index': #include the containers index
                 # default document should not be inserted
                 continue
             #preview doesn't obey toc_filters?
@@ -40,14 +58,15 @@ class TOCRenderingAdapter(adapter.Adapter):
             if interfaces.IContainer.providedBy(item) and \
                    item.is_transparent() and \
                    (toc_depth == -1 or indent < toc_depth):
-                for (dep,o) in self._get_tree_iterator(item, indent + 1, toc_depth=toc_depth):
+                for (dep,o) in self._get_tree_iterator(item, indent + 1, toc_depth=toc_depth,sort_order=sort_order,show_types=show_types):
                     yield (dep,o)
 
-    def _get_public_tree_iterator(self, container, indent=0, include_non_transparent_containers=0, toc_depth=-1):
+    def _get_public_tree_iterator(self, container, indent=0, include_non_transparent_containers=0, toc_depth=-1,sort_order='silva',show_types=['Silva Document','Silva Folder', 'Silva Publication']):
         toc_filter = self.context.service_toc_filter
-        for item in container.get_ordered_publishables():
+        items = self._get_container_items(container,sort_order,show_types)
+        for (name,item) in items:
             if not (item.is_published() or interfaces.IAsset.providedBy(item)) or \
-                   (indent and item.id=='index'):
+                   (indent and name=='index'):
                 continue
             if toc_filter.filter(item):
                     continue
@@ -57,10 +76,13 @@ class TOCRenderingAdapter(adapter.Adapter):
                  include_non_transparent_containers))  and \
                 (toc_depth == -1 or indent < toc_depth):
                 for (dep,o) in self._get_public_tree_iterator(item, indent+1,
-                                                   include_non_transparent_containers,toc_depth=toc_depth):
+                                                   include_non_transparent_containers,toc_depth=toc_depth,sort_order=sort_order,show_types=show_types):
                     yield (dep,o)
 
-    def render_tree(self, public=1, append_to_url=None, toc_depth=-1):
+    def render_tree(self, public=1, append_to_url=None, toc_depth=-1,
+                    display_desc_flag=False, sort_order="silva",
+                    show_types=['Silva Document', 'Silva Publication', 'Silva Folder'],
+                    show_icon=False):
         if isinstance(append_to_url,StringType):
             if append_to_url[0] != '/':
                 append_to_url = '/' + append_to_url
@@ -79,7 +101,7 @@ class TOCRenderingAdapter(adapter.Adapter):
         gmv = self.context.service_metadata.getMetadataValue
         depth = 0
         item = None
-        for (depth,item) in func(container=self.context,toc_depth=toc_depth):
+        for (depth,item) in func(container=self.context,toc_depth=toc_depth,sort_order=sort_order,show_types=show_types):
             pd = prev_depth[-1]
             if pd < depth: #down one level
                 html.append('<ul class="toc">')
@@ -91,11 +113,18 @@ class TOCRenderingAdapter(adapter.Adapter):
             elif pd == depth: #same level
                 html.append('</li>')
             html.append('<li>')
+            if show_icon:
+                html.append(self.context.render_icon(item))
             title = (public and item.get_title() or item.get_title_editable()) or item.id
             html.append(a_templ%(
                 item.absolute_url(),
                 append_to_url,
                 escape(title)))
+            if display_desc_flag:
+                v = public and item.get_viewable() or item.get_previewable()
+                desc = v and gmv(v,'silva-extra','content_description',acquire=0)
+                if desc:
+                    html.append('<p>%s</p>'%desc)
         else:
             #do this when the loop is finished, to
             #ensure that the lists are ended properly
