@@ -272,7 +272,12 @@ class AutoTOCProducer(SilvaBaseProducer):
     """Export an AutoTOC object to XML.
     """
     def sax(self):
-        self.startElement('auto_toc', {'id': self.context.id})
+        self.startElement('auto_toc', {'id': self.context.id,
+                                       'depth': str(self.context.toc_depth()),
+                                       'types': ','.join(self.context.get_local_types()),
+                                       'sort_order': self.context.sort_order(),
+                                       'show_icon': str(self.context.show_icon()),
+                                       'display_desc_flag': str(self.context.display_desc_flag())})
         self.metadata()
         self.endElement('auto_toc')
     
