@@ -7,20 +7,112 @@
   xmlns:notal="http://www.infrae.com/silva/notal"
   xmlns:tal="http://xml.zope.org/namespaces/tal"
   xmlns:i18n="http://xml.zope.org/namespaces/i18n"
-  tal:define="pretty_meta_type string:automatic table of contents"
+  tal:define="pretty_meta_type string:automatic table of contents;
+              maintitlecolspan string:3"
   i18n:domain="silva">
 <metal:block use-macro="here/macro_edit/macros/editor">
  <metal:fill-editor-slot fill-slot="main">
   <metal:use-macro use-macro="here/macro_edit/macros/three-col-layout">
-   <tr class="feedback" metal:fill-slot="main-body">
-    <td i18n:translate="">
-     An automatic table of contents is generated from the items in its location (depth: <tal:block content="model/toc_depth" i18n:name="depth" />.)
+   <metal:slot fill-slot="main-body">
+    <tr>
+     <th class="align-right" width="12%" i18n:translate="">attributes</th>
+     <th i18n:translate="">content</th>
+     <th i18n:translate="">notes</th>
+    </tr>
+   <tr class="odd">
+    <td class="align-right"><label for="toc_types">AutoTOC Types</label></td>
+    <td tal:define="all_types model/get_silva_types;
+                    my_types model/get_local_types">
+     <select name="toc_types:list" id="toc_types" multiple="multiple" size="6">
+      <option tal:repeat="type all_types"
+        tal:attributes="value type;
+                        selected python:type in my_types and 'selected' or nothing"
+        tal:content="type" />
+     </select>
+    </td>
+    <td>
+     You need to have container types selected (e.g. Folder and Publication) in order for AutoTOC to descend into them.  If no container types are selected,  this will act as if the depth=1, i.e. only return items in this container.
+    </td>
+   </tr>
+   <tr class="even">
+    <td class="align-right"><label for="depth">Depth</label></td>
+    <td tal:define="depth model/toc_depth">
+     <input type="text" name="depth" id="depth" tal:attributes="value depth" />
+    </td>
+    <td>
+     <ul>
+      <li>-1 = unlimited</li>
+      <li>0 = container's items</li>
+     </ul>
+    </td>
+   </tr>
+   <tr class="odd">
+    <td class="align-right"><label for="display_desc">Display Description</label></td>
+    <td tal:define="display_desc model/display_desc_flag">
+     <select name="display_desc" id="display_desc" size="1">
+      <option value="no" tal:attributes="selected python:not display_desc and 'selected' or nothing">No</option>
+      <option value="yes" tal:attributes="selected python:display_desc and 'selected' or nothing">Yes</option>
+     </select>
+    </td>
+    <td>
+     If yes, each item displayed will include it's title and silva-extra
+     content_description, if available.
     </td>
    </tr>
 
-   <tr class="controls" metal:fill-slot="main-foot">
-    <td class="align-right"></td>
+   <tr class="even">
+    <td class="align-right"><label for="show_icon">Show Icon</label></td>
+    <td tal:define="show_icon model/show_icon">
+     <select name="show_icon" id="show_icon" size="1">
+      <option value="no" tal:attributes="selected python:not show_icon and 'selected' or nothing">No</option>
+      <option value="yes" tal:attributes="selected python:show_icon and 'selected' or nothing">Yes</option>
+     </select>
+    </td>
+    <td>If yes, each item displayed will include it's icon.</td>
    </tr>
+
+   <tr class="odd">
+    <td class="align-right"><label for="sort_order">Sort Order</label></td>
+    <td tal:define="sort_order model/sort_order">
+     <select name="sort_order" id="sort_order" size="1">
+      <option value="alpha" tal:attributes="selected python:sort_order=='alpha' and 'selected' or nothing">Alpha</option>
+      <option value="reversealpha" tal:attributes="selected python:sort_order=='reversealpha' and 'selected' or nothing">Reverse-Alpha</option>
+      <option value="silva" tal:attributes="selected python:sort_order=='silva' and 'selected' or nothing">Silva</option>
+     </select>
+    </td>
+    <td>
+      The order items with the same parent will be sorted.
+      <ul>
+       <li><b>Alpha:</b> sort alphabetically</li>
+       <li><b>Reverse-Alpha:</b> reverse-sort alphabetically</li>
+       <li><b>Silva:</b> the order the items appear within the SMI.</li>
+      </ul>
+     </td>
+    </tr>
+
+   </metal:slot>
+
+   <tr class="controls" metal:fill-slot="main-foot">
+    <td class="align-right" colspan="3">
+     <input class="button"
+       type="submit"
+       name="submit:method"
+       value="save types"
+       title="access key: alt-c"
+       accesskey="c"
+       i18n:attributes="value;title;accesskey change_link_accesskey"
+      />
+    </td>
+   </tr>
+
+   <div class="info" metal:fill-slot="right-column" i18n:translate="">
+    <h3 i18n:translate="">
+      <img tal:replace="structure icon" i18n:name="icon"/>
+      AutoTOC
+    </h3>
+    <p>An automatic table of contents is generated from the items in its location, and renders all items from this location that are types in the 'AutoTOC Types' list.</p>
+   </div>
+
   </metal:use-macro>
  </metal:fill-editor-slot>
 </metal:block>
